# crews

document_type_classification_for_insurance/: README.md  pyproject.toml
document_type_classification_for_insurance/db/: chroma.sqlite3
document_type_classification_for_insurance/src/document_type_classification_for_insurance_ocr_data/: crew.py  main.py
document_type_classification_for_insurance/src/document_type_classification_for_insurance_ocr_data/config/: agents.yaml  tasks.yaml
