[project]
name = "document_type_classification_for_insurance_ocr_data"
version = "0.1.0"
description = "document_type_classification_for_insurance_ocr_data using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
document_type_classification_for_insurance_ocr_data = "document_type_classification_for_insurance_ocr_data.main:run"
run_crew = "document_type_classification_for_insurance_ocr_data.main:run"
train = "document_type_classification_for_insurance_ocr_data.main:train"
replay = "document_type_classification_for_insurance_ocr_data.main:replay"
test = "document_type_classification_for_insurance_ocr_data.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
